--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "antd": "^5.3.2",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.1.0",
+    "firebase": "^9.17.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.59.3",
+    "styled-components": "^5.3.9",
     "tabler-icons-react": "^1.56.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
@@ -64,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/uuid": "^9.0.1"
   }
 }
