--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.11.12",
     "@tabler/icons": "^2.10.0",
     "@tabler/icons-react": "^2.10.0",
+    "@tanstack/react-query": "^4.28.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,6 +30,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.3.2",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.1.0",
@@ -37,6 +39,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-imask": "^6.5.0-alpha.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "sass": "^1.59.3",
